--- a/static/css/style.css
+++ b/static/css/style.css
@@ -78,6 +78,11 @@ textarea {
   font-size: 16px;
 }
 
+#defeatText {
+  text-align: center;
+  color: red;
+}
+
 .input-color-container {
   position: relative;
   margin-top: -2.8rem;
